<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <TextView
        android:id="@+id/col_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.1"
        android:padding="8dp"
        android:text="@string/type" />

    <TextView
        android:id="@+id/col_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:padding="8dp"
        android:text="@string/desc" />

    <TextView
        android:id="@+id/col_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.6"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/amount"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/col_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/amount"
        tools:ignore="RtlHardcoded,Suspicious0dp" />

    <TextView
        android:id="@+id/col_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/amount"
        tools:ignore="RtlHardcoded,Suspicious0dp" />
</LinearLayout>