<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity"
    android:baselineAligned="false">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bg"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/title_record"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#7986CB"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="60dp"
                android:paddingTop="10dp"
                android:paddingEnd="55dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="30dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/type_record"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/write"
                        android:textSize="20sp"
                        tools:ignore="RtlCompat,RtlSymmetry" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="true"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/amount_record"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/write"
                        android:textSize="20sp"
                        tools:ignore="RtlCompat,RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="30dp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_income"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/income"
                            tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintButtonSize" />

                        <RadioButton
                            android:id="@+id/radio_spent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/spent"
                            tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintButtonSize" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/amount_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:gravity="center"
                        android:hint="@string/example_amount"
                        android:includeFontPadding="true"
                        android:inputType="numberDecimal"
                        android:paddingTop="5dp"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="RtlCompat,RtlSymmetry,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="5sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/desc_record"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/write"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <EditText
                    android:id="@+id/desc_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="5sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:id="@+id/camerabtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/camera_icon"
                    android:padding="10dp"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:id="@+id/uploadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/bg"
                    android:contentDescription="@string/empty_title"
                    app:srcCompat="@drawable/upload" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>