<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#7986CB"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingStart="85dp"
            android:paddingTop="10dp"
            android:paddingEnd="85dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/balance"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/write"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:paddingTop="5dp"
                    android:text="@string/income"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/write"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/spent"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/write"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/valuebalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/valueincome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:paddingTop="5dp"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/add"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/valuespent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/remove"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/history"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/title"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <Button
                android:id="@+id/button1"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/all"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bg"
                android:text="@string/income"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bg"
                android:text="@string/spent"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:contentDescription="@string/history">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="400sp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:paddingStart="25dp"
                android:paddingTop="10dp"
                android:paddingEnd="25dp"
                tools:ignore="NestedScrolling,Suspicious0dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>